<resources>
    <string name="app_name">SaiyaGym</string>
    <string name="cambiar_contra">Change Password</string>
    <string name="nombre_del_ejercicio">Exercise´s Name</string>
    <string name="entendido">OK</string>
    <string name="correo_electr_nico_actual">Current Email</string>
    <string name="contra">Password</string>
    <string name="nuevo_correo_electr_nico">New Email</string>
    <string name="g_nero">Gender</string>
    <string name="correo_electr_nico">Email</string>
    <string name="contrase_a_actual">Current Password</string>
    <string name="nueva_contrase_a">New Password</string>
    <string name="repita_la_nueva_contrase_a">Verify the Password</string>
    <string name="menos_de_70">Less than 70%</string>
    <string name="entre_70_y_80">Between 70% and 80%</string>
    <string name="entre_80_y_90">Between 80% and 90%</string>
    <string name="mas_de_90">More than 90%</string>
    <string name="volver">Back</string>
    <string name="terminar">Finish</string>
    <string name="usuarios">Users</string>
    <string name="add_user">Add User</string>
    <string name="editar_ejercicios">Edit Exercises</string>
    <string name="crear_ejercicio">Add an Exercise</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="video_url">Video ID</string>
    <string name="add_ejercicio">Add</string>
    <string name="eliminar_ejercicio">Remove an Exercise:</string>
    <string name="remove_ejercicio">Remove</string>
    <string name="calendario">Calendar</string>
    <string name="rutina">Routine</string>
    <string name="ajustes">Settings</string>
    <string name="cambiar_correo_electr_nico">Change Email</string>
    <string name="cerrar_sesi_n">Log Out</string>
    <string name="cambiar_medidas">Change Measurements</string>
    <string name="modo_claro_oscuro">Dark/Light Mode</string>
    <string name="ingrese_su_peso_kg">Enter your weight(Kg)</string>
    <string name="ingrese_su_altura_cm">Enter your height(cm)</string>
    <string name="ingrese_su_edad_a_os">Enter your age(years)</string>
    <string name="de_masa_muscular">% of Muscle Mass :</string>
    <string name="guardar_cambios">Save Data</string>
    <string name="correo_electronico">Email</string>
    <string name="recordar_contrase_a">Remember Password</string>
    <string name="log_in">Log In</string>
    <string name="he_olvidado_mi_contrase_a">Forgot My Password</string>
    <string name="no_tengo_cuenta">Don´t Have an Account</string>
    <string name="se_ha_enviado_un_mensaje_a_la_cuenta_de_correo_facilitada_ingresa_en_dicha_cuenta_y_sigue_las_instrucciones_para_recuperar_la_contrase_a">A message has been sent to the email address provided. Sign in to your account and follow the instructions to recover your password.</string>
    <string name="enviar_correo">Send Email</string>
    <string name="ya_tengo_cuenta_creada">I Have an Account</string>
    <string name="calendario_menu">Calendar</string>
    <string name="ejercicios">Exercises</string>
    <string name="sign_in">Sign In</string>
    <string-array name="categories_array">
        <item>Volumen</item>
        <item>Cardio</item>
        <item>Mantenimiento</item>
        <item>Definicion</item>
    </string-array>
    <string-array name="days_array">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
    <string-array name="user_roles">
        <item>user</item>
        <item>admin</item>
    </string-array>
        <string name="day_0">Today we will do moderate intensity cardiovascular exercises to start reducing the glycogen reserves that we have filled over the weekend.</string>
        <string name="day_1">We will do high-intensity interval training to start adapting the body to moderate-intense efforts.</string>
        <string name="day_2">We will practice multi-joint exercises to help the body adapt to certain movements.</string>
        <string name="day_3">Today we will perform exercises that prioritize the users entertainment to make the workout more enjoyable.</string>
        <string name="day_4">We will do exercises with a bit more joint impact, which will help to dislodge fat from the adipose tissue more easily.</string>
        <string name="rest_day">Rest</string>

    <string name="day_en_0">We will start the week with exercises focused on strengthening the back muscles, and as a secondary muscle, we will focus on the biceps.</string>
    <string name="day_en_1">We will continue the week with exercises focused on strengthening the chest muscles, and as a secondary muscle, we will focus on the triceps.</string>
    <string name="day_en_2">Its time to do exercises to strengthen and develop the abdominal wall. Keep in mind that to show abs, the first thing you need to do is reduce your body fat percentage.</string>
    <string name="day_en_3">Today is the most dreaded day for all gym users, as nobody likes to do legs, but... get ready for muscle soreness in 2 days.</string>
    <string name="day_en_4">Today we will do exercises to strengthen the upper extremities, especially the biceps and triceps, as the necessary 72 hours have passed to train muscles with fast-twitch fibers again.</string>
    <string name="day_en_rest">Rest</string>
</resources>