<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/userTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/editar_ejercicios"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/crear_ejercicio"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userTextView" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textViewCategory"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:entries="@array/categories_array" />

            <Spinner
                android:id="@+id/spinnerDay"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCategory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:entries="@array/days_array" />

            <EditText
                android:id="@+id/editTextID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/id"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/editTextID"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@+id/editTextName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/editTextVideoURL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/video_url"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_ejercicio"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextVideoURL" />

            <TextView
                android:id="@+id/textViewDeleteHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/eliminar_ejercicio"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSubmit" />

            <Spinner
                android:id="@+id/spinnerDeleteCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textViewDeleteHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:entries="@array/categories_array"
                android:layout_marginTop="8dp"/>

            <Spinner
                android:id="@+id/spinnerDeleteDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDeleteCategory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:entries="@array/days_array"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/editTextDeleteExerciseName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDeleteDay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDeleteExercise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#DA3B2F"
                android:text="@string/remove_ejercicio"
                app:cornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDeleteExerciseName"
                app:layout_constraintVertical_bias="0.045" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
